## Copyright (c) 2008
## The gstreamermm development team.

sublib_name = gstreamerbasemm
sublib_namespace = GstBase
sublib_parentdir = gstreamerbasemm
files_defs = gstbase.defs gstbase_methods.defs gstbase_signals.defs gstbase_enums.defs gstbase_vfuncs.defs gstbase_others.defs gstbase_docs.xml gstbase_docs_override.xml

main_defs = gstbase

include $(top_srcdir)/build_shared/Makefile_gensrc.am_fragment

