SUBDIRS = src gstreamermm-plugins-good

EXTRA_DIST = README gstreamermm-plugins-good-config.h.in \
	     gstreamermm-plugins-good-0.10.pc.in gstreamermm-plugins-good.h

gstreamermm_plugins_good_includedir = $(includedir)/gstreamermm-plugins-good-0.10
gstreamermm_plugins_good_include_DATA = gstreamermm-plugins-good.h

gstreamermm_plugins_good_configdir = $(libdir)/gstreamermm-plugins-good-0.10/include
gstreamermm_plugins_good_config_DATA = gstreamermm-plugins-good-config.h

pkgconfigdir          = $(libdir)/pkgconfig
pkgconfig_DATA        = gstreamermm-plugins-good-0.10.pc

