INCLUDES = -I$(top_builddir)/gstreamer-plugins-good \
	  -I$(top_srcdir)/gstreamer-plugins-good \
	  @GSTREAMERMM_PLUGINS_GOOD_CFLAGS@

LDADD=$(top_builddir)/gstreamer-plugins-good/gstreamermm-plugins-good/libgstreamermm-plugins-good-0.10.la

#noinst_PROGRAMS = test-plugin-signals
noinst_PROGRAMS = 

#test_plugin_signals_SOURCES=test-plugin-signals.cc
#test_plugin_signals_LDFLAGS=@GSTREAMERMM_PLUGINS_GOOD_LIBS@
