## Copyright (c) 2009
## The gstreamermm development team.

sublib_name = gstreamermm-plugins-good
sublib_namespace = Gst
sublib_parentdir = gstreamermm-plugins-good
files_defs = gst.defs gst_methods.defs gst_signals.defs gst_enums.defs gst_vfuncs.defs gst_others.defs gst_docs.xml gst_docs_override.xml

main_defs = gst

include $(top_srcdir)/build_shared/Makefile_gensrc.am_fragment
